kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/delete.mysql.deployment.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: kubeflow
