kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/delete.minio.service.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: kubeflow
