kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/delete.mysql.service.yaml
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kubeflow
