kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/patch.minio.destinationrule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline-minio
spec:
  host: minio.default.svc.cluster.local
