kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/patch.ml-pipeline-mysql.destinationrule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline-mysql
spec:
  host: mariadb.database.svc.cluster.local
