kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/patch.minio.authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: minio-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
