kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/pipelines/patch.mysql.authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mysql
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
